# rag_nutrition_facts_blog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  docker-grafana.yml  docker-grafana_mid.yml  docker-langfuse.yml  docker-mongodb.yml  docker.env  grafana.ini  pyproject.toml  rag_config.toml  redirect.py  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.ps1  setup.py  setup.sh  wait-for-it.sh
app/: home.py
app_assets/: chat_bot_disclaimer.md
dashboard/: Dockerfile  app.py  query_avg_user_rating.json  query_n_user.json  query_ts_char_per_quest.json  query_ts_chat_per_answer.json  query_ts_llm_usage.json  query_ts_n_quest.json  query_ts_rsp_time.json  query_ts_user_rating.json  requirements.txt
data/app_assets/: chat_bot_disclaimer.md
data/blog_posts/: blog_posts_urls.csv
data/ground_truth/: eva_ground_truth.csv  eva_rag_results.json  eva_rag_results_20240911_101327.json  eva_rag_results_20240912_105808.json  eva_rag_results_20240912_114908.json  eva_rag_rsp_time_20240911_101327.csv  eva_rag_rsp_time_20240912_105808.csv  eva_rag_rsp_time_20240912_114908.csv  eva_rag_similarity.csv  eva_rag_similarity_20240911_101327.csv  eva_rag_similarity_20240912_105808.csv  eva_rag_similarity_20240912_114908.csv
data/images/: DALLE_2024-09-16_21.48.45_header.txt
docs/: 20240903_dashboard.json  how_to_build.md  internal_how_to_build.md  internal_project_context.md  internal_project_evaluation.md  linkedin_post.txt  notes_project_context.md  offical_how_i_build_it.md  offical_how_to_run_yourself.md  offical_project_description.md  project_description.md  project_evaluation_internal.md  project_todo_list.md  retrieval_ideas.md
middleware/: Dockerfile  middleware.py  requirements.txt
notebooks/: add-beans-berries-and-greens-to-more-meals.json  adult-exposure-to-lead.html  adult-exposure-to-lead.json  after-marijuana-legalization-did-opioid-overdoses-go-up-stay-the-same-or-go-down.html  after-marijuana-legalization-did-opioid-overdoses-go-up-stay-the-same-or-go-down.json  after-marijuana-legalization-did-opioid-overdoses-go-up-stay-the-same-or-go-down.txt  blog_post.html  blog_post.txt  clean_data.ipynb  data_ingestion.ipynb  dietary-cure-for-hidradenitis-suppurativa.json  eva_ground_truth.csv  eva_title_groups.csv  evaluation_rag.ipynb  evaluation_retrieval.ipynb  evaluations.ipynb  monitoring.ipynb  rag_flow.ipynb  retrieval.ipynb  retrieval_methods.ipynb  vegans-should-consider-taking-dha-supplements.json  web_scraping.ipynb
prompts/: prompt_manager.py
src/: app_utils.py  app_widgets.py  chunking.py  constants.py  embeddings.py  ingestion.py  langfuse_test.py  llm_api.py  mongodb.py  prompt_building.py  retrieval.py  structured_out.py  web_scraping.py
(+11168 files in other folders)
