[metadata]
name = scr
version = 0.1.0

[options]
packages = find:
python_requires = >=3.12
package_dir =
    = src
install_requires =
    groq==0.10.0 # LLM API
    lancedb==0.12.0 # text and vector db
    pandas==2.2.2
    python-dotenv==1.0.1 # for secret variables
    requests==2.32.3 # for web requests
    sentence-transformers==3.0.1 # text embbeings, very big package
    tantivy==0.22.0 # Full-text search in LanceDB
    tomli==2.0.1 # read TOML files
    streamlit==1.38.0 # streamlit app
    beautifulsoup4==4.12.3 # for webpage scraping
    tqdm==4.66.5 # for progress bars

[options.packages.find]
where = src

[options.extras_require]
dev =
    ipykernel==6.29.5 # for jupyter notebook
    pre-commit==3.8.0 # git pre-commit hooks
