[metadata]
name = scr
version = 0.1.0

[options]
packages = find:
python_requires = >=3.12
install_requires =
    beautifulsoup4==4.12.3 # for webpage scraping
    groq==0.10.0 # LLM API provider
    lancedb==0.12.0 # text and vector db
    pandas==2.2.2
    pillow==10.4.0 # to handle images
    pymongo==4.8.0 # for monitoring
    python-dotenv==1.0.1 # for secret variables
    pytz==2024.10 # for timezone
    requests==2.32.3 # for web requests
    sentence-transformers==3.0.1 # text embbeings, very big package
    tantivy==0.22.0 # Full-text search in LanceDB
    tomli==2.0.1 # read TOML files
    torch==2.4.0+cpu # needed for sentence-transformers
    streamlit==1.38.0 # streamlit app
    tqdm==4.66.5 # for progress bars

[options.extras_require]
dev =
    ipykernel==6.29.5 # for jupyter notebook
    pre-commit==3.8.0 # git pre-commit hooks
